tests/errors/calls/method-wrong-arg-type.fn
---
Description: Method called with a wrong argument type
Expected: FN3406
---

type Helpers
{
    static fn TakesTwo(a: i32, b: i32) -> i32
    {
        return a + b
    }
}

type Program
{
    fn Main -> i32
    {
        var x = Helpers.TakesTwo(1.0, 2)
        return 0
    }
}
